# hive

./: .gitignore  .gitleaks.toml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  sonar-project.properties  tasks.py
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backup-test.yml  ci.yml  dependabot-automerge.yml  deploy-dev.yml  deploy.yml  label-check.yml  main-branch-guard.yml  publish-js-sdk.yml  publish-python-sdk.yml  release-drafter.yml  release-milestone-watcher.yml  security.yml  synthetic-traffic.yml
.vite/vitest/: results.json
docs/: admin-ui.md  alarms.md  api-reference.md  architecture.md  mcp-setup.md  oauth.md
docs-site/: 404.md  api-reference.md  faq.md  index.md  package-lock.json  package.json
docs-site/.vitepress/: config.mjs
docs-site/.vitepress/theme/: index.js  style.css
docs-site/concepts/: key-conventions.md  large-memory.md  memory-scoping.md  quotas.md  resources.md  tags.md
docs-site/getting-started/: connect-client.md  first-memory.md  quick-start.md  what-is-hive.md
docs-site/public/: openapi.json
docs-site/tools/: forget.md  list-memories.md  overview.md  pack-context.md  prompts.md  recall.md  remember-blob.md  remember.md  remember_blob.md  search-memories.md  summarize-context.md
docs-site/ui-guide/: activity-log.md  memory-browser.md  oauth-clients.md
docs/runbooks/: backup-restore.md
hooks/: pre-push
infra/: .gitignore  README.md  app.py  cdk.json
infra/stacks/: hive_stack.py
scripts/: check_copyright.py  migrate_vectors_to_user_index.py  migrate_workspaces.py  seed_data.py  sonar_to_sarif.py  synthetic_traffic.py
sdk/javascript/: package-lock.json  package.json
sdk/javascript/src/: index.test.ts  index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/hive_client/: __init__.py  client.py  models.py
sdk/python/tests/: test_client.py
src/hive/: README.md  blob_store.py  hybrid_search.py  logging_config.py  metrics.py  models.py  quota.py  rate_limiter.py  server.py  storage.py  vector_store.py
src/hive/api/: _auth.py  account.py  admin.py  clients.py  csp.py  keys.py  logs.py  main.py  memories.py  stats.py  users.py  versions.py
src/hive/auth/: dcr.py  google.py  mgmt_auth.py  oauth.py  tokens.py
tests/: README.md
tests/e2e/: conftest.py  test_admin_e2e.py  test_auth_e2e.py  test_dashboard_e2e.py  test_docs_e2e.py  test_mcp_e2e.py  test_ui_e2e.py
tests/integration/: test_api.py  test_mcp_tools.py  test_oauth.py  test_oauth_user_binding.py
tests/unit/: test_account_api.py  test_admin_api.py  test_api.py  test_auth.py  test_blob_store.py  test_csp_api.py  test_google.py  test_hybrid_search.py  test_keys_api.py  test_logging.py  test_logs_api.py  test_metrics.py  test_migrate_vectors.py  test_migrate_workspaces.py  test_models.py  test_quota.py  test_rate_limiter.py  test_server.py  test_storage.py  test_vector_store.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/public/: robots.txt  sitemap.xml
ui/src/: App.jsx  App.test.jsx  analytics.js  analytics.test.js  api.js  api.test.js  index.css  main.jsx  setupTests.js
ui/src/components/: ActivityLog.jsx  ActivityLog.test.jsx  ApiKeysPanel.jsx  ApiKeysPanel.test.jsx  AuthCallback.jsx  AuthCallback.test.jsx  ChangelogPage.jsx  ChangelogPage.test.jsx  ClientManager.jsx  ClientManager.test.jsx  ConsentBanner.jsx  ConsentBanner.test.jsx  Dashboard.jsx  Dashboard.test.jsx  EmptyState.jsx  EmptyState.test.jsx  ErrorBoundary.jsx  ErrorBoundary.test.jsx  FaqPage.jsx  FaqPage.test.jsx  HomePage.jsx  HomePage.test.jsx  LogViewer.jsx  LogViewer.test.jsx  LoginPage.jsx  LoginPage.test.jsx  McpClientsPage.jsx  (+31 more)
(+50 files in other folders)
