[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hive-client"
dynamic = ["version"]
description = "Python client SDK for the Hive memory API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "John Carter" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://app.hive-memory.com"
Repository = "https://github.com/warlordofmars/hive"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[tool.hatch.build.targets.wheel]
packages = ["src/hive_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]
